# merak

./: CHANGELOG.md  package.json
.changes/: server-hello.md
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: lib.rs
crates/macros/: CHANGELOG.md  Cargo.toml
crates/macros/src/: lib.rs
crates/merak/: CHANGELOG.md  Cargo.toml
crates/merak/src/: main.rs
crates/merak/src/auth/: service.rs
crates/merak/src/routes/: auth.rs
src/: index.tsx
src/pages/: dashboard.tsx
